v2.5.5/_sources/plugins/sms_provider_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.sms_provider_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.sms_provider_info module -- Information module for SMS Provider
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.5.5).

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.ise.sms_provider_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.ise.sms_provider_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.ise 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all SMS Provider.
- This API allows the client to get all the SMS providers.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.ise.sms_provider_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk \>= 2.0.3
- python \>= 3.5






.. Options

Parameters
----------


.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filter"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-filter:

      .. rst-class:: ansible-option-title

      **filter**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filter" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Filter query parameter. \*\*Simple filtering\*\* should be available through the filter query string parameter. The structure of a filter is a triplet of field operator and value separated with dots. More than one filter can be sent. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the "filterType=or" query string parameter.
          

      Each resource Data model description should specify if an attribute is a filtered field.

      The 'EQ' operator describes 'Equals'.

      The 'NEQ' operator describes 'Not Equals'.

      The 'GT' operator describes 'Greater Than'.

      The 'LT' operator describes 'Less Than'.

      The 'STARTSW' operator describes 'Starts With'.

      The 'NSTARTSW' operator describes 'Not Starts With'.

      The 'ENDSW' operator describes 'Ends With'.

      The 'NENDSW' operator describes 'Not Ends With'.

      The 'CONTAINS' operator describes 'Contains'.

      The 'NCONTAINS' operator describes 'Not Contains'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filterType"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-filtertype:

      .. rst-class:: ansible-option-title

      **filterType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filterType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      FilterType query parameter. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the parameter.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise\_hostname}}.

      If it is false, it sends the requests to https://{{ise\_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_csrf_token"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_uses_csrf_token:

      .. rst-class:: ansible-option-title

      **ise_uses_csrf_token**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_csrf_token" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 3.0.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether we send the CSRF token to ISE's ERS APIs.

      If it is True, the SDK assumes that your ISE CSRF Check is enabled.

      If it is True, it assumes you need the SDK to manage the CSRF token automatically for you.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1\_Patch\_1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-page"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-page:

      .. rst-class:: ansible-option-title

      **page**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-page" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Page query parameter. Page number.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-size"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-size:

      .. rst-class:: ansible-option-title

      **size**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-size" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Size query parameter. Number of objects returned per page.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortasc"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-sortasc:

      .. rst-class:: ansible-option-title

      **sortasc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortasc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sortasc query parameter. Sort asc.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortdsc"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__parameter-sortdsc:

      .. rst-class:: ansible-option-title

      **sortdsc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortdsc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sortdsc query parameter. Sort desc.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are sms\_provider.SmsProvider.get\_sms\_provider\_generator,
   - Paths used are get /ers/config/smsprovider,
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise\_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all SMS Provider
      cisco.ise.sms_provider_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        page: 1
        size: 20
        sortasc: string
        sortdsc: string
        filter: []
        filterType: AND
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"[\\n  {\\n    \\"id\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"link\\": {\\n      \\"rel\\": \\"string\\",\\n      \\"href\\": \\"string\\",\\n      \\"type\\": \\"string\\"\\n    }\\n  }\\n]\\n"`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_responses"></div>

      .. _ansible_collections.cisco.ise.sms_provider_info_module__return-ise_responses:

      .. rst-class:: ansible-option-title

      **ise_responses**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_responses" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"[\\n  {\\n    \\"id\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"link\\": {\\n      \\"rel\\": \\"string\\",\\n      \\"href\\": \\"string\\",\\n      \\"type\\": \\"string\\"\\n    }\\n  }\\n]\\n"`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/CiscoISE/ansible-ise/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/CiscoISE/ansible-ise" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

